manifests/test/envoy-gateway/rbac.authorization.k8s.io_v1_rolebinding_envoy-gateway-gateway-helm-certgen.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  annotations:
    helm.sh/hook: pre-install, pre-upgrade
    helm.sh/hook-weight: "-1"
  labels:
    app.kubernetes.io/instance: envoy-gateway
    app.kubernetes.io/name: gateway-helm
  name: envoy-gateway-gateway-helm-certgen
  namespace: envoy-gateway-system
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: envoy-gateway-gateway-helm-certgen
subjects:
- kind: ServiceAccount
  name: envoy-gateway-gateway-helm-certgen
  namespace: envoy-gateway-system
