manifests/test/envoy-gateway/v1_service_envoy-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: envoy-gateway
    app.kubernetes.io/name: gateway-helm
    control-plane: envoy-gateway
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  ports:
  - name: grpc
    port: 18000
    targetPort: 18000
  - name: ratelimit
    port: 18001
    targetPort: 18001
  - name: wasm
    port: 18002
    targetPort: 18002
  - name: metrics
    port: 19001
    targetPort: 19001
  - name: webhook
    port: 9443
    targetPort: 9443
  selector:
    app.kubernetes.io/instance: envoy-gateway
    app.kubernetes.io/name: gateway-helm
    control-plane: envoy-gateway
