manifests/test/envoy-gateway/v1_serviceaccount_envoy-gateway-gateway-helm-certgen.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  annotations:
    helm.sh/hook: pre-install, pre-upgrade
    helm.sh/hook-weight: "-1"
  labels:
    app.kubernetes.io/instance: envoy-gateway
    app.kubernetes.io/name: gateway-helm
  name: envoy-gateway-gateway-helm-certgen
  namespace: envoy-gateway-system
